# ha-silverline

./: .gitignore  CLAUDE.md  PLATINUM_REPORT.md  README.md  access.yaml.example  hacs.json  pyproject.toml
.claude/agents/: ha-idiom-reviewer.md  kiss-architect.md  platinum-implementer.md  quality-scale-auditor.md  review-auditor.md  test-integrity-reviewer.md  typing-reviewer.md
.githooks/: pre-commit
.github/workflows/: pysilverline-pypi.yaml  tests.yaml
custom_components/poolex_silverline/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  icons.json  manifest.json  number.py  quality_scale.yaml  select.py  sensor.py  strings.json  switch.py  util.py
custom_components/poolex_silverline/translations/: de.json  en.json
docs/: pr-tuya-v34.md
pysilverline/: pyproject.toml
pysilverline/src/pysilverline/: __init__.py  client.py  const.py  discovery.py  layouts.py  models.py  protocol.py
pysilverline/tests/: test_client.py  test_client_34.py  test_client_35.py  test_client_35_more.py  test_client_more.py  test_discovery.py  test_discovery_more.py  test_models.py  test_protocol.py  test_protocol_34.py  test_protocol_35.py
scripts/: install-hooks.sh  platinum-gate.sh  probe.py
tests/: conftest.py  test_binary_sensor.py  test_climate.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_number.py  test_repair_issues.py  test_select.py  test_sensor.py  test_util.py
tests/snapshots/: test_sensor.ambr
