[project]
name = "ha-silverline"
# The authoritative version for users is manifest.json. This block exists
# only so pytest / mypy / coverage can pick the repo up as a package
# during local dev; keep it in sync with the manifest when bumping.
version = "0.6.1"
description = "Home Assistant custom component for Poolex Silverline pool heat pumps."
requires-python = ">=3.13"

[project.optional-dependencies]
test = [
  "pysilverline @ file://./pysilverline",
  "pytest>=8",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-homeassistant-custom-component",
  "syrupy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["custom_components.poolex_silverline"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true
# Match the Python the locally-installed HA was built against — its
# source uses syntax newer than 3.13 in places, and mypy parses it for
# type inference. Our integration code stays 3.13-compatible (no 3.14
# syntax in custom_components/), so CI on 3.13 also parses cleanly.
python_version = "3.14"
files = ["custom_components/poolex_silverline"]
ignore_missing_imports = true
