[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysilverline"
version = "0.3.6"
description = "Async client for Poolex Silverline / Tuya v3.3/v3.4/v3.5 pool heat pumps."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Christian Reiss", email = "email@christian-reiss.de" }]
keywords = ["tuya", "poolex", "silverline", "heatpump", "home-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
dependencies = ["cryptography>=44.0"]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/christianreiss/ha-silverline"
Issues = "https://github.com/christianreiss/ha-silverline/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pysilverline"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-p no:homeassistant -p no:pytest_homeassistant_custom_component -p no:pytest-homeassistant-custom-component -p no:syrupy"

[tool.mypy]
strict = true
python_version = "3.13"
files = ["src/pysilverline"]
